<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/custom_item_relative_layout"
    android:background="@drawable/text_box"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:elevation="4dp">

    <TextView
        android:id="@+id/text_post_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_toStartOf="@id/text_post_tag"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/Post_title"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_post_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/tag"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_post_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_post_title"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/About"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_claim_donation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_button"
        android:text="@string/claim_donation"
        android:textColor="@android:color/white" />
</RelativeLayout>