<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout_logIn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="40dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="49dp"
        android:layout_marginTop="309dp"
        android:layout_marginEnd="49dp"
        android:background="@drawable/text_box"

        android:clickable="true"
        android:elevation="4dp"
        android:ems="15"
        android:gravity="center"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:textColor="#828282"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/text_password"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/text_email"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="49dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="49dp"
        android:background="@drawable/text_box"
        android:elevation="4dp"
        android:ems="15"
        android:gravity="center"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColor="#828282"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_logIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/round_shape_transparent"
        android:elevation="4dp"
        android:onClick="logIn"
        android:shadowRadius="14"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/round_shape_transparent"
        android:elevation="4dp"
        android:onClick="signUp"
        android:shadowRadius="14"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="#774083"
        android:textSize="22sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:elevation="8dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_password"
        android:layout_marginBottom="80dp"
        android:background="@drawable/text_box" />

</RelativeLayout>