<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout_donate_page"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Donate">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_donate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_donate"
        android:layout_alignParentStart="true">

        <Spinner
            android:id="@+id/donate_spinner"
            android:layout_width="100dp"
            android:layout_height="35sp"
            android:background="@drawable/text_box"
            android:elevation="4dp"
            android:pointerIcon="horizontal_double_arrow"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:popupBackground="@drawable/text_box"
            />
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignLeft="@id/donate_spinner"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="90dp"
            android:background="@android:drawable/arrow_down_float"
            android:elevation="5dp"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/product_name_text"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@id/donate_spinner"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:hint="@string/Product_name"
            android:layout_marginLeft="49dp"
            android:layout_marginRight="49dp"
            android:inputType="text"
            android:background="@drawable/text_box"
            android:elevation="4dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_prod_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_name_text"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/Product_detail_hint"
            android:textColor="@android:color/black"
            android:layout_marginTop="20dp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/product_des_text"
            android:layout_width="match_parent"
            android:layout_marginStart="49dp"
            android:layout_marginEnd="49dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_prod_desc"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1dp"
            android:ems="10"
            android:background="@drawable/text_box"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:elevation="4dp"
            android:hint="@string/Product_detail_hint"
            android:text="@string/Product_detail"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_donate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_below="@id/product_des_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:background="@drawable/rounded_button"
            android:onClick="donate"
            android:text="@string/Donate"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_donate"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:layout_marginTop="20dp"
            android:hint="@string/request"
            android:textAlignment="center" />
    </RelativeLayout>
</RelativeLayout>